Rename project from "ProjectSandwich" to "LiveCache" and update related documentation and examples. Enhance package dependencies and improve TypeScript configurations.

--- a/examples/vanilla-js/index.html
+++ b/examples/vanilla-js/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ProjectSandwich - Vanilla JS Core Example</title>
+        <title>LiveCache - Vanilla JS Core Example</title>
         <style>
             body {
                 font-family:
@@ -174,10 +174,10 @@
     </head>
     <body>
         <div class="container">
-            <h1>ProjectSandwich <span class="pill">Core APIs</span></h1>
+            <h1>LiveCache <span class="pill">Core APIs</span></h1>
             <p class="subtitle">
                 Vanilla JavaScript example using core primitives via the UMD
-                build (<code>ProjectSandwich</code> global). Logic is split into
+                build (<code>LiveCache</code> global). Logic is split into
                 separate JS files loaded in order.
             </p>
 
@@ -357,7 +357,7 @@
             </div>
         </div>
 
-        <!-- Load library (UMD => window.ProjectSandwich) -->
+        <!-- Load library (UMD => window.LiveCache) -->
         <script src="../../dist/index.js"></script>
 
         <!-- Load example scripts in order (no modules) -->
