Update .gitignore to include npm cache and cursor files, modify package.json build script to ensure cleaning before building, and update README and example files to reference the correct UMD bundle path. Adjust Rollup configuration for named exports and ensure proper module resolution.

--- a/examples/vanilla-js/index.html
+++ b/examples/vanilla-js/index.html
@@ -358,7 +358,7 @@
         </div>
 
         <!-- Load library (UMD => window.LiveCache) -->
-        <script src="../../dist/index.js"></script>
+        <script src="../../dist/index.umd.js"></script>
 
         <!-- Load example scripts in order (no modules) -->
         <script src="./js/logger.js"></script>
